--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Thesis</title>
     <img src="REPLACE" alt="">
     <style>
       body {
@@ -58,7 +58,7 @@
 	No personal data is recorded
       </h2>
       <p>
-	I am not collecting any personal data throughout these experiments. We are strictly collecting a minimum of information, in order to build a statistical foundation. The data are only available to me and my supervisors and are deleted after the thesis has been handed in. Visiting a link from a QR-code does not inform me of who you are, but merely that the QR-code has been scanned.
+	I am not collecting any personal data throughout these experiments. We are strictly collecting a minimum of information, in order to build a statistical foundation. The data are only available to me and my supervisors and are deleted after the thesis has been handed in. Visiting a link from a QR-code does not inform me of who you are, only that the QR-code has been scanned.
       </p>
       <h2>
 	Next step
