--- a/utils/templates/index.html
+++ b/utils/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Thesis</title>
     <img src="REPLACE" alt="">
     <style>
       body {
@@ -46,19 +46,19 @@
 	Welcome!
       </h2>
       <p>
-	My name is Johannes and I am currently writing my thesis on DTU (Technical University of Denmark). I am writing about cyber security awareness in the public domain. In combination with my thesis, my supervisors and I are conducting a series of experiments. The experiments consist of placing flash drives and QR-codes in public- as well as private common areas, to collect data on, whether the flash drives are collected and plugged into PC’s as well as if the the domains the QR-codes are linking to, are visited.
+	My name is Johannes and I am currently writing my thesis on DTU (Technical University of Denmark). I am writing about cyber security awareness in the public domain. In combination with my thesis, my supervisors and I are conducting a series of experiments. The experiments consist of placing flash drives in public- as well as private common areas, to collect data on, whether the flash drives are collected and plugged into PC’s.
       </p>
       <h2>
-	It's pure research
+	It's purely research
       </h2>
       <p>
-	The experiments we are conducting are in no way dangerous and the execution hereof is coordinated with the administration of your workplace. The flash drives contain simple files, that notify me if they are opened. Likewise, the QR-codes link to a harmless inforamtion page as this one. The flash drives and QR-codes does not contain any malicious code.
+	The experiments we are conducting are in no way dangerous and the execution hereof is coordinated with the administration of your workplace. The flash drives contain simple files, that notify me if they are opened. The flash drives and QR-codes does <b>not</b> contain any malicious code.
       </p>
       <h2>
 	No personal data is recorded
       </h2>
       <p>
-	I am not collecting any personal data throughout these experiments. We are strictly collecting a minimum of information, in order to build a statistical foundation. The data are only available to me and my supervisors and are deleted after the thesis has been handed in. Opening a file on the flash drive or visiting a link from a QR-code does not inform me of who you are, but merely that the file has been opened or the QR-code link visited.
+	I am not collecting any personal data throughout these experiments. We are strictly collecting a minimum of information, in order to build a statistical foundation. The data are only available to me and my supervisors and are deleted after the thesis has been handed in. Opening a file on the flash drive does not inform me of who you are, only that the file has been opened.
       </p>
       <h2>
 	Next step
