--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -49,10 +49,10 @@
 	My name is Johannes and I am currently writing my thesis on DTU (Technical University of Denmark). I am writing about cyber security awareness in the public domain. In combination with my thesis, my supervisors and I are conducting a series of experiments. The experiments consist of placing QR-codes in public- as well as private common areas, to collect data on whether the domains the QR-codes are linking to, are visited.
       </p>
       <h2>
-	It's pure research
+	It's purely research
       </h2>
       <p>
-	The experiments we are conducting are in no way dangerous and the execution hereof is coordinated with the administration of your workplace. The QR-codes link to a harmless inforamtion page as this one. The QR-codes does <b>not</b> contain any malicious code.
+	The experiments we are conducting are in no way dangerous and the execution hereof is coordinated with the administration of your workplace. The QR-codes link to a harmless information page as this one. The QR-codes does <b>not</b> contain any malicious code.
       </p>
       <h2>
 	No personal data is recorded
