modified return to, placement

--- a/utils/templates/index.html
+++ b/utils/templates/index.html
@@ -64,7 +64,7 @@
 	Next step
       </h2>
       <p>
-	You do not need to do anything further. We hope that you will keep your knowledge about this experiment to yourself a little longer (2 weeks). It can have consequenses for the research data if the experiments are revealed prematurely. Thank you for your understanding. If you are in possession of a collected flash drive, please return it to the IT-department.
+	You do not need to do anything further. We hope that you will keep your knowledge about this experiment to yourself a little longer (2 weeks). It can have consequenses for the research data if the experiments are revealed prematurely. Thank you for your understanding. If you are in possession of a collected flash drive, please return it to the box placed in front of office 216 in building 322.
       </p>
       <h2>
 	Contact
